[package]
name = "async_step_machine"
version = "0.1.0"
edition = "2021"
description = "A Simple Step Machine to improve code maintenance to execute async steps."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]

[repository]
url = "https://github.com/citrixorange/AsyncStepMachine"
